--- a/angular.json
+++ b/angular.json
@@ -18,10 +18,7 @@
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
             "tsConfig": "src/tsconfig.app.json",
-            "assets": [
-              "src/favicon.ico",
-              "src/assets"
-            ],
+            "assets": ["src/favicon.ico", "src/assets"],
             "styles": [
               "src/styles.css",
               "./node_modules/@syncfusion/ej2-angular-grids/styles/material.css",
@@ -31,9 +28,9 @@
               "./node_modules/@syncfusion/ej2-angular-inputs/styles/material.css",
               "./node_modules/@syncfusion/ej2-angular-popups/styles/material.css",
               "./node_modules/@syncfusion/ej2-angular-calendars/styles/material.css",
-              "./node_modules/@syncfusion/ej2-navigations/styles/material.css",
+              "./node_modules/@syncfusion/ej2-angular-navigations/styles/material.css",
               "./node_modules/@syncfusion/ej2-angular-lists/styles/material.css",
-              
+              "./node_modules/@syncfusion/ej2-splitbuttons/styles/material.css",
               "./node_modules/@syncfusion/ej2-dropdowns/styles/material.css"
             ],
             "scripts": [],
@@ -90,26 +87,16 @@
             "polyfills": "src/polyfills.ts",
             "tsConfig": "src/tsconfig.spec.json",
             "karmaConfig": "src/karma.conf.js",
-            "styles": [
-              "src/styles.css"
-            ],
+            "styles": ["src/styles.css"],
             "scripts": [],
-            "assets": [
-              "src/favicon.ico",
-              "src/assets"
-            ]
+            "assets": ["src/favicon.ico", "src/assets"]
           }
         },
         "lint": {
           "builder": "@angular-devkit/build-angular:tslint",
           "options": {
-            "tsConfig": [
-              "src/tsconfig.app.json",
-              "src/tsconfig.spec.json"
-            ],
-            "exclude": [
-              "**/node_modules/**"
-            ]
+            "tsConfig": ["src/tsconfig.app.json", "src/tsconfig.spec.json"],
+            "exclude": ["**/node_modules/**"]
           }
         }
       }
@@ -135,9 +122,7 @@
           "builder": "@angular-devkit/build-angular:tslint",
           "options": {
             "tsConfig": "e2e/tsconfig.e2e.json",
-            "exclude": [
-              "**/node_modules/**"
-            ]
+            "exclude": ["**/node_modules/**"]
           }
         }
       }
