--- a/angular.json
+++ b/angular.json
@@ -33,7 +33,8 @@
               "./node_modules/@syncfusion/ej2-splitbuttons/styles/material.css",
               "./node_modules/@syncfusion/ej2-angular-dropdowns/styles/material.css",
               "./node_modules/@syncfusion/ej2-dropdowns/styles/material.css",
-              "./node_modules/@syncfusion/ej2-treegrid/styles/material.css"
+              "./node_modules/@syncfusion/ej2-treegrid/styles/material.css",
+              "./node_modules/@syncfusion/ej2-layouts/styles/material.css"
             ],
             "scripts": [],
             "es5BrowserSupport": true
