--- a/package.json
+++ b/package.json
@@ -32,9 +32,10 @@
     "@syncfusion/ej2-base": "^16.4.52",
     "@syncfusion/ej2-dropdowns": "^16.4.52",
     "@syncfusion/ej2-grids": "^16.4.52",
-    "@syncfusion/ej2-layouts": "^16.4.52",
+    "@syncfusion/ej2-layouts": "^16.4.55",
     "bootstrap": "^4.3.0",
     "core-js": "^2.5.4",
+    "font-awesome": "^4.7.0",
     "jquery": "^3.3.1",
     "popper.js": "^1.14.7",
     "rxjs": "~6.3.3",
