--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "popper.js": "^1.14.7",
     "rxjs": "~6.3.3",
     "tslib": "^1.9.0",
+    "zemen": "0.0.7",
     "zone.js": "~0.8.26"
   },
   "devDependencies": {
