--- a/package.json
+++ b/package.json
@@ -22,9 +22,11 @@
     "@schematics/angular": "^7.3.1",
     "@syncfusion/ej2-angular-buttons": "^16.4.52",
     "@syncfusion/ej2-angular-calendars": "^16.4.52",
+    "@syncfusion/ej2-angular-charts": "^17.1.47",
     "@syncfusion/ej2-angular-dropdowns": "^16.4.55",
     "@syncfusion/ej2-angular-grids": "^16.4.55",
     "@syncfusion/ej2-angular-inputs": "^16.4.52",
+    "@syncfusion/ej2-angular-layouts": "^17.1.48",
     "@syncfusion/ej2-angular-lists": "^16.4.52",
     "@syncfusion/ej2-angular-navigations": "^16.4.54",
     "@syncfusion/ej2-angular-popups": "^16.4.54",
