account schedule updated

--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@syncfusion/ej2-angular-lists": "^16.4.52",
     "@syncfusion/ej2-angular-navigations": "^16.4.54",
     "@syncfusion/ej2-angular-popups": "^16.4.54",
+    "@syncfusion/ej2-angular-splitbuttons": "^17.1.50",
     "@syncfusion/ej2-angular-treegrid": "^17.1.47",
     "@syncfusion/ej2-base": "^16.4.52",
     "@syncfusion/ej2-dropdowns": "^16.4.52",
