--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "karma-jasmine-html-reporter": "^0.2.2",
     "karma-parallel": "^0.3.1",
     "protractor": "~5.4.0",
+    "source-map-explorer": "^2.0.1",
     "ts-node": "~7.0.0",
     "tslint": "~5.11.0",
     "typescript": "~3.2.2"
